
2016-05-03  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* warning.def, tree.c: added cb_warn_constant_expr for warnings added
	  by Ron Norman on 2016-05-01
	* tree.c: resolve the value at compile time if literal size differs
	  and checks are for = or !=

2016-05-01  Ron Norman

	* In tree.c, for binary (arithmetic & relational) operations between
	  integer constants, resolve the value at compile time and reduce the
	  expression down to the computed value
	* tree.c Also, added checks to validate resolving contant expressions

2016-04-22  Ron Norman

	* parser.y, scanner.l, reserved.c & codegen.c: 
	  updates to support features of an IBM REPORT WRITER 
	  LINE LIMIT
	  PRESENT AFTER & ABSENT AFTER

2016-01-02  Ron Norman

	* In codegen.c, output_index: if subscript is unsigned then
	  output the code as if it was signed. This is to avoid a core dump
	  when an unsigned binary subscript has a value of ZERO.

2016-01-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: fixing all warnings generated by msc code analysis
	  (possible memory related issues)
	* cobc.c (process_filename): don't check object files for valid COBOL
	  file names
	* cobc.c (process_library) [_MSC_VER]: check all input filenames
	  preventing deletion of passed lib file
	* cobc.c (process_filtered) [_MSC_VER]: fix deletion of passed obj file,
	  only filter for file basename (not including directory)
	* cobc.c (line_contains) [_MSC_VER]: only return if all patterns matched
	* Makefile.am: included a move for manual post-fix of sources generated
	  by flex (otherwise the #line directives use the intermediate tmp file)

2015-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: post-process generated flex sources via sed for non-GNU
	  compilers that define __STDC_VERSION__ >= 199901L but don't work correct

2015-12-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
