@@ -3080,11 +3080,14 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 	enum cb_category	category = CB_CATEGORY_UNKNOWN;
 	cob_s64_t			xval,yval;
 	char				result[48];
-	cb_tree				relop;
+	cb_tree				relop, e;
 	int					i,j;
 	struct cb_literal *xl, *yl;
 
-	relop = cb_any;
+	e = relop = cb_any;
+	e->source_file = NULL;
+	e->source_line = cb_exp_line;
+
 	switch (op) {
 	case '+':
 	case '-':
@@ -3171,12 +3174,12 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		/* Relational operators */
 		if ((CB_REF_OR_FIELD_P (x)) &&
 		    CB_FIELD (cb_ref (x))->level == 88) {
-			cb_error_x (x, _("Invalid expression"));
+			cb_error_x (e, _("Invalid expression"));
 			return cb_error_node;
 		}
 		if ((CB_REF_OR_FIELD_P (y)) &&
 		    CB_FIELD (cb_ref (y))->level == 88) {
-			cb_error_x (y, _("Invalid expression"));
+			cb_error_x (e, _("Invalid expression"));
 			return cb_error_node;
 		}
 		xl = (void*)x;
@@ -3196,7 +3199,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 			}
 			if (i > CB_FIELD (cb_ref (y))->size) {
 				if (cb_warn_constant_expr) {
-					cb_warning_x (x, _("Literal is longer than field"));
+					cb_warning_x (e, _("Literal is longer than field"));
 				}
 				switch(op) {
 				case '=':
@@ -3223,7 +3226,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 			}
 			if (i > CB_FIELD (cb_ref (x))->size) {
 				if (cb_warn_constant_expr) {
-					cb_warning_x (x, _("Literal is longer than field"));
+					cb_warning_x (e, _("Literal is longer than field"));
 				}
 				switch(op) {
 				case '=':
@@ -3368,7 +3371,7 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 		/* Logical operators */
 		if (CB_TREE_CLASS (x) != CB_CLASS_BOOLEAN ||
 		    (y && CB_TREE_CLASS (y) != CB_CLASS_BOOLEAN)) {
-			cb_error_x (x, _("Invalid expression"));
+			cb_error_x (e, _("Invalid expression"));
 			return cb_error_node;
 		}
 		if((x == cb_true || x == cb_false)
@@ -3401,14 +3404,14 @@ cb_build_binary_op (cb_tree x, const int op, cb_tree y)
 
 	if (relop == cb_true) {
 		if (cb_warn_constant_expr) {
-			cb_warning_x (x, _("Expression is always TRUE"));
+			cb_warning_x (e, _("Expression is always TRUE"));
 		}
 		category = CB_CATEGORY_BOOLEAN;
 		return cb_true;
 	}
 	if (relop == cb_false) {
 		if (cb_warn_constant_expr) {
-			cb_warning_x (x, _("Expression is always FALSE"));
+			cb_warning_x (e, _("Expression is always FALSE"));
 		}
 		category = CB_CATEGORY_BOOLEAN;
 		return cb_false;
